p14736 Subscription discount and report. Gradle configuration update.